--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     /*Image Loader*/
     implementation 'com.github.bumptech.glide:glide:4.10.0'
+    androidTestImplementation 'androidx.test:rules:1.3.0-rc01'
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.3.0-rc01'
     kapt 'com.github.bumptech.glide:compiler:4.10.0'
     /*Retrofit Api call client*/
     api 'com.squareup.retrofit2:retrofit:2.6.1'
